# qa_guru_python_poetry

./: .gitignore  README.md
first/: README.md  pyproject.toml
first/tests/: test_poetry.py
