[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Olga <ok2304@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
selene = "2.0.0b17"

[tool.poetry.dev-dependencies]
pylint = "2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
